# vita-libvita2d-game

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/src/: main.cpp
app/src/game/: game-module.cpp  game-module.h
app/src/game/atlas/: atlas.cpp  atlas.h
app/src/game/entity/: entity.cpp  entity.h
app/src/game/fps-limiter/: fps-limiter.cpp  fps-limiter.h
app/src/game/sprite/: sprite.cpp  sprite.h
app/src/game/titlescreen/: titlescreen-module.cpp  titlescreen-module.h
app/src/game/titlescreen/entities/: titlescreen-entity.cpp  titlescreen-entity.h  titlescreen-selector-entity.cpp  titlescreen-selector-entity.h
